chore(phase-0): foundation cleanup and B2B direction setup
Why:
The repo carried a dormant Java + Spring Boot microservice scaffold that
the SPA never talked to, and the working Node backend was nested under
Backend/server/ for that reason. With the project now aimed at a B2B
on-prem deployment for universities (starting with an AITU pilot), the
unused scaffold is dead weight that confuses the codebase and inflates
the repo without value. This commit cleans the foundation so Phase 0
(modular monolith, Postgres, isolated judge) can build on a clean base.

Changes:
- Remove the entire Java/Spring scaffold (api-gateway, auth-service,
  user-service, task-service, submission-service, rating-service,
  notification-service, judge-service, discovery-service), the
  multi-service docker-compose.yml, pom.xml, mvnw* wrappers, helper
  Python scripts, and the now-orphan logs/, docker/, NUL artifacts.
- Move Backend/server/* up to Backend/ root. The Node app is the only
  backend that exists; the nested layout was a vestige of the dual stack.
- Update Backend/Dockerfile and .dockerignore for the flattened layout.
- Tighten CORS in Backend/src/index.js: production now rejects unknown
  origins instead of returning cb(null, true) unconditionally; dev mode
  warns and allows for local debugging convenience.
- Fix outdated path references in Backend/src/routes/auth.js, root
  README.md, and Frontend/Frontend/README.md (Backend/server -> Backend,
  Frontend/SkillForge-Frontend -> Frontend/Frontend).
- Replace the legacy "What was changed in this repo" section with a
  forward-looking Roadmap section pointing to docs/decisions/.

New:
- .github/workflows/ci.yml: runs Backend tests and Frontend
  typecheck + build on every push/PR to main.
- docs/decisions/ with the first four ADRs:
    0001 on-prem single-tenant per installation
    0002 PostgreSQL + versioned migrations (replacing SQLite +
         runtime ensureColumn)
    0003 modular monolith with enforced module boundaries
    